letter-sound-1/scss/layout/activity-5.scss
$orange: #f98f44;
$skyblue: #01b1ec;
$oliveGreen: #3e4830;
$englichGreen: #00873a;
$white: #ffffff;
.activity-5-content {
  background-image: url('../assets/5/background.png');

  .img-ground {
    display: block;
  }

  .box_wrapper {
   height: 25rem;
   width: 20rem;
   margin: 2rem;
  }

  .floating-objects-container {
    position: absolute;
    top: 33rem;
    left: 25rem;
    img {
      margin-right: 10rem;
     }
  }

  .character{
    bottom: 5rem;
    position: absolute;
    right: 0;

     img {
      height: 30rem;
      margin-left: auto;
     }
  }

  .talk-bubble {
    width: 30rem;
    right: 13rem;
    bottom: 4rem;

    &::after {
     bottom: initial;
     border-color: #fff transparent transparent #fff;
     right: -1rem;
     top: 1rem;
    }
  }

  .letter .talk-bubble .talktext p {
   font-size: 8em;
   font-weight: bold;
   color: $orange;
   max-height: 10rem;
   text-transform: uppercase;
  }

  .letter .talk-bubble::after {
   border-color: #fff transparent transparent #fff;
   right: -1rem;
   top: 1rem;
  }
}

